force-app/main/default/objects/Tratamiento__c/Tratamiento__c.object-meta.xml
<CustomObject>
    <label>Tratamiento</label>
    <nameField>
        <displayFormat>TRAT-{0000}</displayFormat>
        <label>Nro de Tratamiento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tratamientos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>