force-app/main/default/objects/Tratamiento__c/fields/Agrupacion_por_patologia1__c.field-meta.xml
<CustomField>
    <fullName>Agrupacion_por_patologia1__c</fullName>
    <formula>CASE(TEXT(Patologia__c),&quot;Acidemia metilmalonica/propionica&quot;,&quot;Trastornos metabólicos&quot;,&quot;Fenilcetonuria&quot;,&quot;Trastornos metabólicos&quot;,&quot;Epilepsia Refractaria&quot;,&quot;Enf. Neurológica&quot;,&quot;Glut 1&quot;,&quot;Enf. Neurológica&quot;,&quot;UCD (Trastorno Ciclo de la Urea)&quot;,&quot;Trastornos metabólicos&quot;,&quot;Aciduria Glutarica&quot;,&quot;Trastornos metabólicos&quot;,&quot;Alergia a la Proteina de leche de vaca (APLV)&quot;,&quot;Alergia&quot;,&quot;Esofagitis Eosinofílica&quot;,&quot;Alergia&quot;,&quot;SEIPA (Síndrome de enterocolítis inducida por proteinas alimentarias)&quot;,&quot;Alergia&quot;,&quot;Síndrome mal absortivo&quot;,&quot;Trastornos metabólicos&quot;,&quot;Aciduria Arginosucinica&quot;,&quot;Trastornos metabólicos&quot;,&quot;Adrenoleucodistrofia&quot;,&quot;Enf. Neurológica&quot;,&quot;Fibrosis Quistica&quot;,&quot;Otras enfermedades&quot;,&quot;HCU (Homocistinuria)&quot;,&quot;Trastornos metabólicos&quot;,&quot;DGG (Deficiencia de Glucosa/Galactosa)&quot;,&quot;Trastornos metabólicos&quot;,&quot;Jarabe de Arce&quot;,&quot;Otras enfermedades&quot;,&quot;Tirosinemia&quot;,&quot;Trastornos metabólicos&quot;,&quot;HiperFeninananemia&quot;,&quot;Trastornos metabólicos&quot;,&quot;IVA (Acidemia Isovalérica)&quot;,&quot;Trastornos metabólicos&quot;,&quot;Diabetes (DBT) &quot;,&quot;Trastornos metabólicos&quot;,&quot;Hiperamonemia&quot;,&quot;Trastornos metabólicos&quot;,&quot;Sindrome de intestino corto (SIC)&quot;,&quot;Sindrome de mala absorción&quot;,&quot;Síndrome de Smith&quot;,&quot;Enf. Neurológica&quot;,&quot;Quilotórax&quot;,&quot;Otras enfermedades&quot;,&quot;Trastornos deglutorios&quot;,&quot;Otras enfermedades&quot;,&quot;Parkinson&quot;,&quot;Enf Neurodegenerativa&quot;,&quot;Alzheirmer&quot;,&quot;Enf Neurodegenerativa&quot;,&quot;Demencia senil&quot;,&quot;Enf Neurodegenerativa&quot;,&quot;Deterioro cognitivo crónico&quot;,&quot;Enf Neurodegenerativa&quot;,&quot;Esclerosis lateral amiotrófica (ELA)&quot;,&quot;Enf Neurodegenerativa&quot;,&quot;Demencia otros tipos &quot;,&quot;Enf Neurodegenerativa&quot;,&quot;ACV Isquemico (Accidente cerebrovascular)&quot; ,&quot;Enf. Neurológica&quot;,&quot;ACV Hemorragíco (Accidente cerebrovascular)&quot;,&quot;Enf. Neurológica&quot;,&quot;Secuela neurológica quirúrgica&quot;,&quot;Enf. Neurológica&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agrupación por patología1</label>
    <type>Text</type>
</CustomField>