force-app/main/default/objects/Tratamiento__c/fields/Agrupacion_por_patologia2__c.field-meta.xml
<CustomField>
    <fullName>Agrupacion_por_patologia2__c</fullName>
    <formula>CASE(TEXT(Patologia__c),&quot;Paralisis Cerebral (PC)&quot;,&quot;Enf. Neurológica&quot;,&quot;Retraso madurativo&quot;,&quot;Enf. Neurológica&quot;,&quot;Síndrome de Angelman&quot;,&quot;Enf. Neurológica&quot;,&quot;Encefalopatía crónica no evolutiva (ECNE)&quot;,&quot;Enf. Neurológica&quot;,&quot;Sindrome de Down&quot;,&quot;Otras enfermedades&quot;,&quot;Traumatismo de craneo secuelar  (TEC)&quot;,&quot;Enf. Neurológica&quot;,&quot;Encefalitis&quot;,&quot;Enf Neurológica infecciosa&quot;,&quot;Meninguitis&quot;,&quot;Enf Neurológica infecciosa&quot;,&quot;Tumor cerebral&quot;,&quot;Oncológia&quot;,&quot;tumor de cabeza y cuello&quot;,&quot;Oncológia&quot;,&quot;Tumor del Aparato Respiratorio&quot;,&quot;Oncológia&quot;,&quot;Tumor del Aparato digestivo&quot;,&quot;Oncológia&quot;,&quot;Tumor Osteomuscular&quot;,&quot;Oncológia&quot;,&quot;tumor Ginecologico&quot;,&quot;Oncológia&quot;,&quot;tumor vias urinarias&quot;,&quot;Oncológia&quot;,&quot;tumor urológico&quot;,&quot;Oncológia&quot;,&quot;Cirugía de cabeza y cuello&quot;,&quot;Cirugía&quot;,&quot;Cirugía Gastrointestinal&quot;,&quot;Cirugía&quot;,&quot;cirugía Aparato genitourinario&quot;,&quot;Cirugía&quot;,&quot;Anorexia&quot;,&quot;Trastornos alimentarios&quot;,&quot;Bulimia&quot;,&quot;Trastornos alimentarios&quot;,&quot;Hiporexia&quot;,&quot;Trastornos alimentarios&quot;,&quot;Desnutrición&quot;,&quot;Trastornos alimentarios&quot;,&quot;Desnutrición Asociada a enfermedad&quot;,&quot;Trastornos alimentarios&quot;,&quot;Neumonia Adquirida de la comunidad&quot;,&quot;Patología Respiratoria&quot;,&quot;Neumonia Intrahospitalaria&quot;,&quot;Patología Respiratoria&quot;,&quot;Neumonia Aspirativa&quot;,&quot;Patología Respiratoria&quot;,&quot;Enfermedad obstructiva Crónica (EPOC)&quot;,&quot;Patología Respiratoria&quot;,&quot;Asma&quot;,&quot;Patología Respiratoria&quot;,&quot;Insuficiencia renal Aguda&quot;,&quot;Insuficiencia Renal&quot;,&quot;Insuficiencia renal Crónica&quot;,&quot;Insuficiencia Renal&quot;,&quot;Insuficiencia cardiaca&quot;,&quot;Otras enfermedades&quot;,&quot;Cirrosis Hepatica&quot;,&quot;Otras enfermedades&quot;,&quot;Otras enfermedades&quot;,&quot;Otras enfermedades&quot;,&quot;Sindrome de mala absorción&quot;,&quot;Sindrome de mala absorción&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agrupación por patología2</label>
    <type>Text</type>
</CustomField>