force-app/main/default/objects/Tratamiento__c/fields/Agrupacion_por_patologia__c.field-meta.xml
<CustomField>
    <fullName>Agrupacion_por_patologia__c</fullName>
    <label>Agrupación por patología</label>
    <length>255</length>
    <type>Text</type>
</CustomField>