force-app/main/default/objects/Tratamiento__c/fields/Alimentacion__c.field-meta.xml
<CustomField>
    <fullName>Alimentacion__c</fullName>
    <inlineHelpText>SNO: Soporte nutricional oral

SNE: Soporte nutricional enteral</inlineHelpText>
    <label>Alimentación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SNO</fullName>
            </value>
            <value>
                <fullName>SNE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>