force-app/main/default/objects/Tratamiento__c/fields/Anafilaxia__c.field-meta.xml
<CustomField>
    <fullName>Anafilaxia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anafilaxia</label>
    <type>Checkbox</type>
</CustomField>