force-app/main/default/objects/Tratamiento__c/fields/Anemia__c.field-meta.xml
<CustomField>
    <fullName>Anemia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anemia</label>
    <type>Checkbox</type>
</CustomField>