force-app/main/default/objects/Tratamiento__c/fields/Angioedema__c.field-meta.xml
<CustomField>
    <fullName>Angioedema__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Angioedema</label>
    <type>Checkbox</type>
</CustomField>