force-app/main/default/objects/Tratamiento__c/fields/APLV__c.field-meta.xml
<CustomField>
    <fullName>APLV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APLV</label>
    <type>Checkbox</type>
</CustomField>