force-app/main/default/objects/Tratamiento__c/fields/Area_terapeutica__c.field-meta.xml
<CustomField>
    <fullName>Area_terapeutica__c</fullName>
    <label>Área terapéutica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alergia</fullName>
            </value>
            <value>
                <fullName>Desafíos del crecimiento</fullName>
            </value>
            <value>
                <fullName>Dieta Cetogénica</fullName>
            </value>
            <value>
                <fullName>Digestivos</fullName>
            </value>
            <value>
                <fullName>Disfagia</fullName>
            </value>
            <value>
                <fullName>Malnutrición</fullName>
            </value>
            <value>
                <fullName>Metabólicos</fullName>
            </value>
            <value>
                <fullName>NEG</fullName>
            </value>
            <value>
                <fullName>Oncología</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>