force-app/main/default/objects/Tratamiento__c/fields/Broncoespasmos__c.field-meta.xml
<CustomField>
    <fullName>Broncoespasmos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broncoespasmos</label>
    <type>Checkbox</type>
</CustomField>