force-app/main/default/objects/Tratamiento__c/fields/Centro_de_Diagnostico__c.field-meta.xml
<CustomField>
    <fullName>Centro_de_Diagnostico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centro de Diagnóstico</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Institución</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tratamientos (Centro de Diagnóstico)</relationshipLabel>
    <relationshipName>Tratamientos1</relationshipName>
    <type>Lookup</type>
</CustomField>