force-app/main/default/objects/Tratamiento__c/fields/Centro_de_tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Centro_de_tratamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centro de tratamiento</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Institución</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tratamientos (Centro de tratamiento)</relationshipLabel>
    <relationshipName>Tratamientos2</relationshipName>
    <type>Lookup</type>
</CustomField>