force-app/main/default/objects/Tratamiento__c/fields/Certificado_de_Discapacidad_CUD__c.field-meta.xml
<CustomField>
    <fullName>Certificado_de_Discapacidad_CUD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificado de Discapacidad (CUD)</label>
    <type>Checkbox</type>
</CustomField>