force-app/main/default/objects/Tratamiento__c/fields/Condicion_frente_al_IVA__c.field-meta.xml
<CustomField>
    <fullName>Condicion_frente_al_IVA__c</fullName>
    <label>Condición frente al IVA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excento</fullName>
            </value>
            <value>
                <fullName>Inscripto (gravado)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>