force-app/main/default/objects/Tratamiento__c/fields/Consejeria_Nutricional__c.field-meta.xml
<CustomField>
    <fullName>Consejeria_Nutricional__c</fullName>
    <label>Consejería Nutricional</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>