force-app/main/default/objects/Tratamiento__c/fields/Cupon_kit_de_inicio__c.field-meta.xml
<CustomField>
    <fullName>Cupon_kit_de_inicio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cupón kit de inicio</label>
    <type>Checkbox</type>
</CustomField>