force-app/main/default/objects/Tratamiento__c/fields/Dermatitis_atopica__c.field-meta.xml
<CustomField>
    <fullName>Dermatitis_atopica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dermatitis atópica</label>
    <type>Checkbox</type>
</CustomField>