force-app/main/default/objects/Tratamiento__c/fields/Dermatitis_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>Dermatitis_de_contacto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dermatitis de contacto</label>
    <type>Checkbox</type>
</CustomField>