force-app/main/default/objects/Tratamiento__c/fields/Desafio__c.field-meta.xml
<CustomField>
    <fullName>Desafio__c</fullName>
    <label>Desafío</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>