force-app/main/default/objects/Tratamiento__c/fields/Diarrea_colicos_constipacion__c.field-meta.xml
<CustomField>
    <fullName>Diarrea_colicos_constipacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diarrea, cólicos, constipación</label>
    <type>Checkbox</type>
</CustomField>