force-app/main/default/objects/Tratamiento__c/fields/Disfagia__c.field-meta.xml
<CustomField>
    <fullName>Disfagia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disfagia</label>
    <type>Checkbox</type>
</CustomField>