force-app/main/default/objects/Tratamiento__c/fields/Disfonia__c.field-meta.xml
<CustomField>
    <fullName>Disfonia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disfonía</label>
    <type>Checkbox</type>
</CustomField>