force-app/main/default/objects/Tratamiento__c/fields/Distres_respiratorio__c.field-meta.xml
<CustomField>
    <fullName>Distres_respiratorio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distrés respiratorio</label>
    <type>Checkbox</type>
</CustomField>