force-app/main/default/objects/Tratamiento__c/fields/Documentacion__c.field-meta.xml
<CustomField>
    <fullName>Documentacion__c</fullName>
    <label>Documentación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Receta</fullName>
            </value>
            <value>
                <fullName>Historia clínica</fullName>
            </value>
            <value>
                <fullName>Cupón kit de inicio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>