force-app/main/default/objects/Tratamiento__c/fields/Donde_lo_adquiri__c.field-meta.xml
<CustomField>
    <fullName>Donde_lo_adquiri__c</fullName>
    <label>Donde lo adquirió</label>
    <length>100</length>
    <type>Text</type>
</CustomField>