force-app/main/default/objects/Tratamiento__c/fields/Enterocolitis_proctocolitis__c.field-meta.xml
<CustomField>
    <fullName>Enterocolitis_proctocolitis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enterocolitis, proctocolitis</label>
    <type>Checkbox</type>
</CustomField>