force-app/main/default/objects/Tratamiento__c/fields/Eosinofilia__c.field-meta.xml
<CustomField>
    <fullName>Eosinofilia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eosinofilia</label>
    <type>Checkbox</type>
</CustomField>