force-app/main/default/objects/Tratamiento__c/fields/Falla_de_crecimiento__c.field-meta.xml
<CustomField>
    <fullName>Falla_de_crecimiento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Falla de crecimiento</label>
    <type>Checkbox</type>
</CustomField>