force-app/main/default/objects/Tratamiento__c/fields/Fecha_de_desafio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_desafio__c</fullName>
    <label>Fecha de desafío</label>
    <type>Date</type>
</CustomField>