force-app/main/default/objects/Tratamiento__c/fields/Fecha_Inicio_Tramite_de_Cobertura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_Tramite_de_Cobertura__c</fullName>
    <description>Fecha de inicio de trámite de cobertura Nutricia Siempre Juntos</description>
    <label>Fecha Inicio Trámite de Cobertura</label>
    <type>Date</type>
</CustomField>