force-app/main/default/objects/Tratamiento__c/fields/Fecha_probable_de_alta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_probable_de_alta__c</fullName>
    <label>Fecha probable de alta</label>
    <type>Date</type>
</CustomField>