force-app/main/default/objects/Tratamiento__c/fields/Hemosiderosis_pulmonar__c.field-meta.xml
<CustomField>
    <fullName>Hemosiderosis_pulmonar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hemosiderosis pulmonar</label>
    <type>Checkbox</type>
</CustomField>