force-app/main/default/objects/Tratamiento__c/fields/Herramienta_Screening_Nutricional__c.field-meta.xml
<CustomField>
    <fullName>Herramienta_Screening_Nutricional__c</fullName>
    <description>Herramienta utilizada para screening nutricional</description>
    <label>Herramienta Screening Nutricional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PNRS</fullName>
            </value>
            <value>
                <fullName>PYMS</fullName>
            </value>
            <value>
                <fullName>SGNA</fullName>
            </value>
            <value>
                <fullName>STAMP</fullName>
            </value>
            <value>
                <fullName>STRONG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>