force-app/main/default/objects/Tratamiento__c/fields/Hipoalbuminemia__c.field-meta.xml
<CustomField>
    <fullName>Hipoalbuminemia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hipoalbuminemia</label>
    <type>Checkbox</type>
</CustomField>