force-app/main/default/objects/Tratamiento__c/fields/Historia_clinica__c.field-meta.xml
<CustomField>
    <fullName>Historia_clinica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historia clínica</label>
    <type>Checkbox</type>
</CustomField>