force-app/main/default/objects/Tratamiento__c/fields/Honorarios_profesional__c.field-meta.xml
<CustomField>
    <fullName>Honorarios_profesional__c</fullName>
    <formula>IF(  RecordType.Name  = &quot;Tratamiento Best Care&quot; , 8525, IF( RecordType.Name = &quot;Tratamiento Regular&quot;,1705, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Honorarios profesional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>