force-app/main/default/objects/Tratamiento__c/fields/KAM__c.field-meta.xml
<CustomField>
    <fullName>KAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KAM</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contacto community</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tratamientos</relationshipLabel>
    <relationshipName>Tratamientos</relationshipName>
    <type>Lookup</type>
</CustomField>