force-app/main/default/objects/Tratamiento__c/fields/KAM_Usuario__c.field-meta.xml
<CustomField>
    <fullName>KAM_Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KAM Best Care</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>&apos;KAM Best Care&apos;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Tratamientos</relationshipName>
    <type>Lookup</type>
</CustomField>