force-app/main/default/objects/Tratamiento__c/fields/Kit_de_inicio_a_la_madre__c.field-meta.xml
<CustomField>
    <fullName>Kit_de_inicio_a_la_madre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kit de inicio a la madre</label>
    <type>Checkbox</type>
</CustomField>