force-app/main/default/objects/Tratamiento__c/fields/Lista_de_profesionales__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_profesionales__c</fullName>
    <label>Lista de profesionales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>