force-app/main/default/objects/Tratamiento__c/fields/Listo_para_Jitterbit__c.field-meta.xml
<CustomField>
    <fullName>Listo_para_Jitterbit__c</fullName>
    <formula>Cuenta__r.Listo_para_Jitterbit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listo para Jitterbit</label>
    <type>Checkbox</type>
</CustomField>