force-app/main/default/objects/Tratamiento__c/fields/Llanto_irritabilidad__c.field-meta.xml
<CustomField>
    <fullName>Llanto_irritabilidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Llanto, irritabilidad</label>
    <type>Checkbox</type>
</CustomField>