force-app/main/default/objects/Tratamiento__c/fields/Malabsorcion__c.field-meta.xml
<CustomField>
    <fullName>Malabsorcion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Malabsorción</label>
    <type>Checkbox</type>
</CustomField>