force-app/main/default/objects/Tratamiento__c/fields/Motivo_De_Kit__c.field-meta.xml
<CustomField>
    <fullName>Motivo_De_Kit__c</fullName>
    <label>Motivo De Kit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prueba de diagnóstico</fullName>
            </value>
            <value>
                <fullName>Tolerancia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>