force-app/main/default/objects/Tratamiento__c/fields/N_de_afiliado__c.field-meta.xml
<CustomField>
    <fullName>N_de_afiliado__c</fullName>
    <label>N° de afiliado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>