force-app/main/default/objects/Tratamiento__c/fields/Nivel_Secuelado__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Secuelado__c</fullName>
    <label>Nivel Secuelado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Bajo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>