force-app/main/default/objects/Tratamiento__c/fields/Numero_de_kit__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_kit__c</fullName>
    <label>Número de kit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>