force-app/main/default/objects/Tratamiento__c/fields/Obra_social__c.field-meta.xml
<CustomField>
    <fullName>Obra_social__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Obra social</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Obra social</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tratamientos</relationshipLabel>
    <relationshipName>Tratamientos3</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>