force-app/main/default/objects/Tratamiento__c/fields/Otro__c.field-meta.xml
<CustomField>
    <fullName>Otro__c</fullName>
    <label>Otro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>