force-app/main/default/objects/Tratamiento__c/fields/Paciente__c.field-meta.xml
<CustomField>
    <fullName>Paciente__c</fullName>
    <formula>Cuenta__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paciente</label>
    <type>Text</type>
</CustomField>