force-app/main/default/objects/Tratamiento__c/fields/Patologia__c.field-meta.xml
<CustomField>
    <fullName>Patologia__c</fullName>
    <label>Patología</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Area_terapeutica__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abetalipoproteinemia</fullName>
            </value>
            <value>
                <fullName>Acidemia metilmalonica/propionica</fullName>
            </value>
            <value>
                <fullName>Aciduria Arginosucinica</fullName>
            </value>
            <value>
                <fullName>Aciduria Glutarica</fullName>
            </value>
            <value>
                <fullName>ACV Hemorragíco (Accidente cerebrovascular)</fullName>
            </value>
            <value>
                <fullName>ACV Isquemico (Accidente cerebrovascular)</fullName>
            </value>
            <value>
                <fullName>Adrenoleucodistrofia</fullName>
            </value>
            <value>
                <fullName>Alergia a la Proteina de leche de vaca (APLV)</fullName>
            </value>
            <value>
                <fullName>Alzheimer</fullName>
            </value>
            <value>
                <fullName>Anorexia</fullName>
            </value>
            <value>
                <fullName>Asma</fullName>
            </value>
            <value>
                <fullName>Bajo peso</fullName>
            </value>
            <value>
                <fullName>Bulimia</fullName>
            </value>
            <value>
                <fullName>Cáncer de origen primario desconocido</fullName>
            </value>
            <value>
                <fullName>Cardiopatía congénita</fullName>
            </value>
            <value>
                <fullName>Cirrosis Hepatica</fullName>
            </value>
            <value>
                <fullName>Cirugía Aparato genitourinario</fullName>
            </value>
            <value>
                <fullName>Cirugía de cabeza y cuello</fullName>
            </value>
            <value>
                <fullName>Cirugía Gastrointestinal</fullName>
            </value>
            <value>
                <fullName>Cólicos/Constipación</fullName>
            </value>
            <value>
                <fullName>Complejos Mitocondriales tipo 1</fullName>
            </value>
            <value>
                <fullName>Deficiencia del transportador de Glucosa (GLUT 1)</fullName>
            </value>
            <value>
                <fullName>Deficiencia de piruvato deshidrogenasa (PDH)</fullName>
            </value>
            <value>
                <fullName>Demencia otros tipos</fullName>
            </value>
            <value>
                <fullName>Demencia senil</fullName>
            </value>
            <value>
                <fullName>Desnutrición</fullName>
            </value>
            <value>
                <fullName>Desnutrición Asociada a enfermedad</fullName>
            </value>
            <value>
                <fullName>Deterioro cognitivo crónico</fullName>
            </value>
            <value>
                <fullName>DGG (Deficiencia de Glucosa/Galactosa)</fullName>
            </value>
            <value>
                <fullName>Diabetes (DBT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>