force-app/main/default/objects/Tratamiento__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>