force-app/main/default/objects/Tratamiento__c/fields/Primer_Tramite_de_Cobertura_Medica__c.field-meta.xml
<CustomField>
    <fullName>Primer_Tramite_de_Cobertura_Medica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primer Trámite de Cobertura Médica</label>
    <type>Checkbox</type>
</CustomField>