force-app/main/default/objects/Tratamiento__c/fields/Proxima_visita_profesional__c.field-meta.xml
<CustomField>
    <fullName>Proxima_visita_profesional__c</fullName>
    <label>Próxima visita profesional</label>
    <type>Date</type>
</CustomField>