force-app/main/default/objects/Tratamiento__c/fields/Rash_cutaneo__c.field-meta.xml
<CustomField>
    <fullName>Rash_cutaneo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rash cutáneo</label>
    <type>Checkbox</type>
</CustomField>