force-app/main/default/objects/Tratamiento__c/fields/Receta__c.field-meta.xml
<CustomField>
    <fullName>Receta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receta</label>
    <type>Checkbox</type>
</CustomField>