force-app/main/default/objects/Tratamiento__c/fields/Rechazo_de_alimento__c.field-meta.xml
<CustomField>
    <fullName>Rechazo_de_alimento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechazo de alimento</label>
    <type>Checkbox</type>
</CustomField>