force-app/main/default/objects/Tratamiento__c/fields/Reinternacion__c.field-meta.xml
<CustomField>
    <fullName>Reinternacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reinternación</label>
    <type>Checkbox</type>
</CustomField>