force-app/main/default/objects/Tratamiento__c/fields/Resultado_Screening_Nutricional__c.field-meta.xml
<CustomField>
    <fullName>Resultado_Screening_Nutricional__c</fullName>
    <label>Resultado Screening Nutricional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>