force-app/main/default/objects/Tratamiento__c/fields/Rinorrea__c.field-meta.xml
<CustomField>
    <fullName>Rinorrea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rinorrea</label>
    <type>Checkbox</type>
</CustomField>