force-app/main/default/objects/Tratamiento__c/fields/S_ntomas__c.field-meta.xml
<CustomField>
    <fullName>S_ntomas__c</fullName>
    <label>Síntomas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vómitos</fullName>
            </value>
            <value>
                <fullName>Regurgitación</fullName>
            </value>
            <value>
                <fullName>Llanto persistente</fullName>
            </value>
            <value>
                <fullName>Postura de Sandifer</fullName>
            </value>
            <value>
                <fullName>Pérdida de peso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>