force-app/main/default/objects/Tratamiento__c/fields/Screening_Nutricional__c.field-meta.xml
<CustomField>
    <fullName>Screening_Nutricional__c</fullName>
    <description>Indica si el paciente de Desafío del crecimiento utilizó alguna herramienta de Screening Nutricional</description>
    <label>Screening Nutricional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>