force-app/main/default/objects/Tratamiento__c/fields/Sibilancia__c.field-meta.xml
<CustomField>
    <fullName>Sibilancia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sibilancia</label>
    <type>Checkbox</type>
</CustomField>