force-app/main/default/objects/Tratamiento__c/fields/Sindrome_de_alergia_oral__c.field-meta.xml
<CustomField>
    <fullName>Sindrome_de_alergia_oral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Síndrome de alergia oral</label>
    <type>Checkbox</type>
</CustomField>